--- a/berkas-latex/psolve.tex
+++ b/berkas-latex/psolve.tex
@@ -118,7 +118,7 @@ Walaupun kita terbiasa menyelesaikan masalah fisika dengan fisika aljabar, tidak
    \item $a \propto b$ artinya adalah "a berbanding lurus terhadap b"
    \item Perlu diketahui bahwa $a\propto b$ tidak sama dengan $a=b$
    \item Secara matematis, $a\propto b$ dapat dinyatakan sebagai $a = kb$ untuk suatu konstanta $k$
-   \item Misalnya saja, luas lingkaran adalah $L = \pi r^2$. Dalam hal ini, $L \propto r$. Saat $r$ menjadi 2 kali lipat, Luasnya akan bertambah 4 kali lipat
+   \item Misalnya saja, luas lingkaran adalah $L = \pi r^2$. Dalam hal ini, $L \propto r^2$. Saat $r$ menjadi 2 kali lipat, Luasnya akan bertambah 4 kali lipat
    \item Jika diketahui $a_1 \propto \alpha_1$ dan $a_2 \propto \alpha_2$ (konstanta sama), maka
    $$\frac{a_1}{a_2} = \frac{\alpha_1}{\alpha_2}$$
   
